--- a/index.html
+++ b/index.html
@@ -334,27 +334,27 @@
               <div class="u-container-style u-layout-cell u-size-30-xl u-size-60-lg u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-lg u-valign-middle-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
                   <div class="div3 u-custom-color-2 u-form u-radius-5 u-form-1">
-                    <form action="https://formsubmit.co/office@anur3.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" redirect="true">
-              <div class="u-form-group u-form-name">
-                <label for="name-5a14" class="u-form-control-hidden u-label">Name</label>
-                <input type="text" placeholder="Enter your Name" id="name-5a14" name="name" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
-              </div>
-              <div class="u-form-email u-form-group">
-                <label for="email-5a14" class="u-form-control-hidden u-label">Email</label>
-                <input type="email" placeholder="Enter a valid email address" id="email-5a14" name="email" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
-              </div>
-              <div class="u-form-group u-form-message">
-                <label for="message-5a14" class="u-form-control-hidden u-label">Message</label>
-                <textarea placeholder="Enter your message" rows="4" cols="50" id="message-5a14" name="message" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required=""></textarea>
-              </div>
-              <div class="u-align-center u-form-group u-form-submit">
-                <a href="#" class="u-active-black u-border-2 u-border-active-black u-border-grey-50 u-border-hover-black u-btn u-btn-round u-btn-submit u-button-style u-grey-50 u-hover-black u-radius-50 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">Submit</a>
-                <input type="submit" value="submit" class="u-form-control-hidden">
-              </div>
-              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-              <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-              <input type="hidden" value="" name="recaptchaResponse">
-            </form>
+                     <form action="https://formsubmit.co/office@anur3.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-25 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 25px;" redirect="true">
+                      <div class="u-form-group u-form-name">
+                        <label for="name-ce07" class="u-custom-font u-font-oswald u-label u-text-custom-color-3 u-label-1">Name</label>
+                        <input type="text" placeholder="Enter your Name" id="name-ce07" name="name" class="u-border-1 u-border-custom-color-1 u-border-no-left u-border-no-right u-border-no-top u-custom-font u-input u-input-rectangle u-text-custom-color-3 u-text-font" required="">
+                      </div>
+                      <div class="u-form-email u-form-group">
+                        <label for="email-ce07" class="u-custom-font u-font-oswald u-label u-text-custom-color-3 u-label-2">Email</label>
+                        <input type="email" placeholder="Enter a valid email address" id="email-ce07" name="email" class="u-border-1 u-border-custom-color-1 u-border-no-left u-border-no-right u-border-no-top u-custom-font u-input u-input-rectangle u-text-custom-color-3 u-text-font" required="">
+                      </div>
+                      <div class="u-form-group u-form-message">
+                        <label for="message-ce07" class="u-custom-font u-font-oswald u-label u-text-custom-color-3 u-label-3">Message</label>
+                        <textarea placeholder="Enter your message" rows="4" cols="50" id="message-ce07" name="message" class="u-border-1 u-border-custom-color-1 u-border-no-left u-border-no-right u-border-no-top u-custom-font u-input u-input-rectangle u-text-custom-color-3 u-text-font" required=""></textarea>
+                      </div>
+                      <div class="u-align-right u-form-group u-form-submit">
+                        <a href="#" class="u-border-2 u-border-custom-color-1 u-border-hover-custom-color-1 u-btn u-btn-round u-btn-submit u-button-style u-hover-custom-color-1 u-none u-radius-5 u-text-custom-color-1 u-text-hover-custom-color-2 u-btn-1">Submit</a>
+                        <input type="submit" value="submit" class="u-form-control-hidden">
+                      </div>
+                      <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+                      <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+                      <input type="hidden" value="" name="recaptchaResponse">
+                    </form>
                   </div>
                 </div>
               </div>
