--- a/Pricing.html
+++ b/Pricing.html
@@ -115,7 +115,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-2">BASIC</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-3"> $400/month</h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-3"> $200/month</h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-4"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ (max. 3 pages)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-2"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
@@ -127,7 +127,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1000">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-5">STANDARD</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-6"> $600/month</h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-6"> $300/month</h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-7"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ (max. 5 pages)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-6"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
@@ -140,7 +140,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="1000">
                 <div class="u-container-layout u-valign-top u-container-layout-3">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-8">PREMIUM</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-9"> $1000/month</h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-9"> $800/month</h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-10"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ (blog or online store)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-11"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
@@ -160,15 +160,15 @@
         <div class="u-align-center u-clearfix u-group-elements u-group-elements-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <p class="u-align-left u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-12" data-animation-name="customAnimationIn" data-animation-duration="1000">OTHER DIGITAL MARKETING SERVICES<br>
           </p>
-          <p class="u-align-left u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-13" data-animation-name="customAnimationIn" data-animation-duration="1000">+ $200<br>
+          <p class="u-align-left u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-13" data-animation-name="customAnimationIn" data-animation-duration="1000">+ $50<br>
           </p>
-          <p class="u-align-left u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-14" data-animation-name="customAnimationIn" data-animation-duration="1000"> &nbsp;<span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Creation, graphics, templates, infographics <br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Site optimization for search engines <br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Email marketing campaigns with customer databases<br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Content marketing- production of adapted and optimized original content <br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Web design<br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Purchases of licensed images and graphics<br>
-            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Marketing through online influencers/blogging/forums
+          <p class="u-align-left u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-14" data-animation-name="customAnimationIn" data-animation-duration="1000"> &nbsp;<span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Creation, graphics, templates, infographics (+$50)<br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Site optimization for search engines ($200/month) <br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Email marketing campaigns with customer databases (+$100/month)<br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Content marketing- production of adapted and optimized original content (+$50)<br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Web design (+$150)<br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Purchases of licensed images and graphics (+$50)<br>
+            <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Marketing through online influencers/blogging/forums (+$100)
           </p>
         </div>
       </div>
