--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,8 +27,9 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "WebSite2780458",
-		"logo": "logo-24.png"
+		"name": "ANUR3INNOVATIVE",
+		"url": "http://www.example.com",
+		"logo": "http://www.anur3.com/logo-24.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
