--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "ANUR3INNOVATIVE",
-		"url": "http://www.example.com",
+		"url": "http://www.anur3.com",
 		"logo": "http://www.anur3.com/logo-24.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
