--- a/Home.html
+++ b/Home.html
@@ -96,7 +96,7 @@
                     <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-2"></div>
                     <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-3"></div>
                     <h1 class="u-custom-font u-font-oswald u-text u-text-custom-color-2 u-title u-text-1">UNLOCK YOUR​ FULL POTENTIAL.</h1>
-                    <a href="Home.html#sec-dbda" data-page-id="2780469" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-radius-5 u-text-custom-color-3 u-text-hover-white u-btn-1">SEE MORE</a>
+                    <a href="Home.html#sec-dbda" data-page-id="2780469" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-radius-5 u-text-custom-color-3 u-text-hover-white u-btn-1">READ MORE</a>
                   </div>
                 </div>
               </div>
