--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-2"></div>
                     <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-3"></div>
                     <h1 class="u-custom-font u-font-oswald u-text u-text-custom-color-2 u-title u-text-1">UNLOCK YOUR​ FULL POTENTIAL.</h1>
-                    <a href="Home.html#sec-dbda" data-page-id="2780469" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-radius-5 u-text-custom-color-3 u-text-hover-white u-btn-1">SEE MORE</a>
+                    <a href="Home.html#sec-dbda" data-page-id="2780469" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-radius-5 u-text-custom-color-3 u-text-hover-white u-btn-1">READ MORE</a>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                   <div class="u-container-style u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-group u-shape-rectangle u-group-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
                     <div class="u-container-layout">
                       <p class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2"> We will help you unlock your full potential with our services such as creating modern optimized websites, SEO, PPC, branding strategy, and more.</p>
-                      <a href="About-us.html" data-page-id="2801589" class="u-border-2 u-border-custom-color-1 u-border-hover-custom-color-1 u-btn u-btn-round u-button-style u-custom-font u-font-oswald u-hover-custom-color-1 u-none u-radius-5 u-text-hover-custom-color-2 u-btn-1">See More</a>
+                      <a href="About-us.html" data-page-id="2801589" class="u-border-2 u-border-custom-color-1 u-border-hover-custom-color-1 u-btn u-btn-round u-button-style u-custom-font u-font-oswald u-hover-custom-color-1 u-none u-radius-5 u-text-hover-custom-color-2 u-btn-1">Read More</a>
                     </div>
                   </div>
                 </div>
